trunk/Archive2/c2/b7f85b24b5ad62/main.cpp
int main()
{
    struct base { int x; };
    struct derived : base { int x; };
    
    &derived{}.base::x;
}